--- a/app/assets/stylesheets/_ranking.scss
+++ b/app/assets/stylesheets/_ranking.scss
@@ -1,8 +1,8 @@
 .a-side{
   width: 300px;
-  margin-left: 16px;
+  margin-left: 20px;
   padding-right: 110px;
-  float: right;
+  float: left;
 
   .p-home_ad{
     height: 250px;
