--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,9 +12,12 @@
           %details
             %summary
             %ul
-              .trend
-              .timeline
-              .tag-feed
+              .articles_trend
+                = link_to "", trend_path
+              .articles_timeline
+                = link_to "", timeline_path
+              .articles_tag-feed
+                = link_to "", tag_feed_path
         .community
           %details
             %summary
